--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "body-parser": "^2.2.1",
     "express": "^5.1.0"
   },
   "devDependencies": {
