--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
   "description": "",
   "dependencies": {
     "body-parser": "^2.2.1",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "express-rate-limit": "^8.2.1",
+    "http-errors": "^2.0.1",
+    "xss-clean": "^0.1.4"
   },
   "devDependencies": {
     "morgan": "^1.10.1",
