--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "express": "^5.1.0",
     "express-rate-limit": "^8.2.1",
     "http-errors": "^2.0.1",
+    "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.0.2",
     "xss-clean": "^0.1.4"
   },
