--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
   "description": "",
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.3",
     "body-parser": "^2.2.1",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
@@ -23,6 +24,7 @@
     "http-errors": "^2.0.1",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.0.2",
+    "nodemailer": "^7.0.12",
     "xss-clean": "^0.1.4"
   },
   "devDependencies": {
