--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "http-errors": "^2.0.1",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.0.2",
+    "multer": "^2.0.2",
     "nodemailer": "^7.0.12",
     "xss-clean": "^0.1.4"
   },
