--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,7 @@
 SERVER_PORT=5000
 MONGODB_ATLAS_URL=mongodb+srv://ecommarsDB:ecommarsDB202@cluster0.l2ihscx.mongodb.net/ecommarsDB
 JWT_ACTIVATION_KEY=THTJHFH6R-@@@$
+JWT_ACCESS_KEY=YOUR_ACCESS_KEY_HERE
 SMTP_USERNAME=mdtanim.dev@gmail.com
 SMTP_PASSWORD=dnkgbowtpgwqvvyt
 CLIENT_URL=http://localhost:5000
