react vite create

--- a/server/.env
+++ b/server/.env
@@ -7,3 +7,6 @@
     SMTP_USERNAME=mdtanim.dev@gmail.com
     SMTP_PASSWORD=dnkgbowtpgwqvvyt
     CLIENT_URL=http://localhost:5000
+    CLOUDINARY_NAME=dxp3kamcl
+    CLOUDINARY_API=857643792597418
+    CLOUDINARY_SECRET_KEY=VVI5f8GeMdMq9A9YoJHngUu3Zio
